--- a/Aula 5/ToDoList/views/index.ejs
+++ b/Aula 5/ToDoList/views/index.ejs
@@ -6,7 +6,7 @@
     <title>ToDo List</title>
 </head>
 <body>
-    <h1>ToDo task list</h1>
+    <h1>ToDo list: tasks</h1>
     
     <table>
         <thead>
@@ -24,13 +24,14 @@
                         <%= task.completed?"Completed":"Pending" %>
                     </td>
                     <td>
-                        <a href="/tasks/<%= task.id %>">Finish<%= task.id %></a>
+                        <a href="/tasks/<%= task.id %>">Finish</a>
+                        <a href="/delTasks/<%= task.id %>">Delete</a>
                     </td>
                 </tr>
             <% }); %>
         </tbody>
     </table>
     <br>
-    <a>New task</a>
+    <a href="/newTask">New task</a>
 </body>
 </html>
